# API_com_FastAPI

./: pyproject.toml
fast_one/: app.py  models.py  schemas.py
migration/versions/: affc0764dd86_create_users_table.py
migrations/: env.py
migrations/versions/: 77a72fde2956_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
