[tool.poetry]
name = "fast-one"
version = "0.1.0"
description = ""
authors = ["MarceleLouiseSAra <louise20marcele03@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.4"}


[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
taskipy = "^1.14.0"

[tool.poetry.group.pytest.dependencies]
pytest-cov = "^5.0.0"

[tool.pytest.ini_options]
pythonpath = '.'
addopts = '-p no:warnings'


[tool.ruff] # formatação
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks] # makefile
run = 'fastapi dev fast_one/app.py'

lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'

pre_test = 'task lint' # cadeias de comando
test = 'pytest --cov=fast_one -vv'
post_test = 'coverage html'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"